# sqlc

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  dag.cpp  example.csv  example.sql  join.csv  sqlbuild.cpp  sqlc.cpp  sqlc.sh  test.sql
algebra/: csv_reader.hpp  data.csv  operators.hpp  relation.hpp  test.cpp  types.hpp
src/: generator.rs  intermediate.rs  ir.rs  main.rs  visitor.rs
test-simple-number/: numbers.sql  squares.sql  summary.sql
