[package]
name = "sqlc"
version = "0.1.0"
edition = "2021"
description = "Compile SQL to C++"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pre-commit-hooks = "0.3"
logos = "0.14.0"
csv = "1.3"
sqlparser = "0.46.0"

[package.metadata.precommit]
fmt = "cargo fmt"
